<resources>
    <string name="app_name">Mentra</string>
    <string name="default_error">An error occurred, try again later</string>
    <string name="retry">Retry</string>
    <string name="connection_error">You don\'t have an active internet connection</string>
    <string name="wallets_subtitle">Wallets</string>
    <string name="add_wallet">Add wallet</string>
    <string name="wallet_name_input_label">Wallet name</string>
    <string name="action_save_wallet">Save</string>
    <string name="create_wallet">Create wallet</string>
    <string name="coin_name_hint">Search coin</string>
    <string name="amount_hint">Amount owned</string>
    <string name="no_coin_selected_warning">You haven\'t selected a coin</string>
    <string name="invalid_amount_warning">Invalid coin amount, it must be greater than zero</string>
    <string name="value_history">Value history</string>
    <string name="coin_distribution">Coin Distribution</string>
    <string name="delete_wallet">Delete wallet</string>
    <string name="delete_wallet_confirmation">Are you sure you want to delete this wallet? This action cannot be undone.</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_wallet_deletion">Yes, delete it</string>
    <string name="edit_wallet">Edit wallet</string>
    <string name="amount_update_hint">Amount</string>
    <string name="save">Save</string>
    <string name="invalid_number">Invalid value</string>
    <string name="required_field">Required field</string>
    <string name="last_day_change">%1$s %2$s (%3$s)</string>
    <string name="last_day_change_tooltip">24 hour change</string>
    <string name="price_refresh_error">Error, could not get the latest coin prices</string>
    <string name="whoops_something_went_wrong">Whoops! Something went wrong</string>
    <string name="error_loading_wallets">An error occurred while trying to load your wallets.</string>
    <string name="error_loading_currencies">An error occurred trying to get the currency list.</string>
    <string name="empty_wallets_title">You don\'t have any wallets</string>
    <string name="empty_wallets_description">When you create one it will show up here.</string>
    <string name="coin_list_fetch_error">An error occurred while getting the list of supported coins.</string>
    <string name="currency_list_fetch_error">You can skip this step, the default currency will be US Dollars and you can change it at any time in the app settings.</string>
    <string name="coin_list_refresh_error">An error occurred refreshing the list of coins.</string>
    <string name="coins_updated">The supported coin list has been updated.</string>
    <string name="create_wallet_error">Error, could not save your wallet</string>
    <string name="no_coins_were_found_for_your_search">No coins were found for your search</string>
    <string name="create_wallet_desc_step_1">First, select the wallet\'s coin</string>
    <string name="create_wallet_desc_step_2">Now, enter how many of them it holds</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="settings">Settings</string>
    <string name="select_a_currency">Select a currency</string>
    <string name="currency">Currency</string>
    <string name="automatically_refresh_prices">Automatically refresh prices</string>
    <string name="refreshes_the_list_of_supported_coins">Refreshes the list of supported coins</string>
    <string name="update_coin_list">Update coin list</string>
    <string name="app_version">App version</string>
    <string name="build_type">Build type</string>
    <string name="libraries_used_in_the_project">Libraries used in the project</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="every_3_hours">Every 3 hours</string>
    <string name="every_6_hours">Every 6 hours</string>
    <string name="every_12_hours">Every 12 hours</string>
    <string name="every_x_hours">Every %1$d hours</string>
    <string name="once_a_day">Once a day</string>
    <string name="not_found">The requested resource was not found</string>
    <string name="service_temporarily_unavailable">The service is temporarily unavailable, try again later</string>
    <string name="access_denied">You don\'t have enough permissions for this action</string>
    <string name="get_started">Get started</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="onboarding_currency">%1$s (%2$s)</string>
    <string name="onboarding_currency_select_title">In what currency do you want to see prices and values?</string>
    <string name="onboarding_auto_refresh_title">How often do you want your portfolio value to be refreshed?</string>
    <string name="all_done">All done.</string>
    <string name="onboarding_finish_description">You can now add your wallets and we will take care of the rest.</string>
    <string name="onboarding_finish_button">Finish</string>
    <string name="welcome">Welcome.</string>
    <string name="benefits">Track the behaviour and composition of your portfolio over time.</string>
    <string name="empty_coin_distribution">Add a wallet to start seeing your coin distribution.</string>
    <string name="empty_line_chart_warning">Add a wallet to start tracking your portfolio value.</string>
</resources>