<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.onboarding.benefits.OnboardingBenefitsFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="42dp"
        android:gravity="center_vertical|end"
        android:text="@string/onboarding_currency_select_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.bosphere.fadingedgelayout.FadingEdgeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="46dp"
        app:fel_edge="top|bottom"
        app:fel_size_bottom="30dp"
        app:fel_size_top="30dp"
        app:layout_constraintBottom_toTopOf="@+id/previousStepButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/currencyRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingVertical="8dp"
            tools:listitem="@layout/onboarding_currency_item" />

    </com.bosphere.fadingedgelayout.FadingEdgeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="?attr/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/previousStepButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/errorStateView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/previousStepButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/error_graphic" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:text="@string/whoops_something_went_wrong" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/currency_list_fetch_error"
            android:textAlignment="center"
            android:visibility="visible" />

        <Button
            android:id="@+id/retryButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/primary_or_disabled"
            android:text="@string/retry"
            android:textColor="?attr/colorOnPrimary" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/previousStepButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginBottom="30dp"
        android:drawableTint="@color/wild_strawberry"
        android:text="@string/back"
        app:icon="@drawable/ic_arrow_back_18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/nextStepButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginBottom="30dp"
        android:drawableEnd="@drawable/ic_arrow_forward_18"
        android:drawableTint="@color/wild_strawberry"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>