<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/edit_wallet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amountInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:hint="@string/amount_update_hint"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:endIconDrawable="@drawable/ic_coins"
        app:endIconMode="custom"
        app:errorEnabled="true"
        app:errorIconTint="?attr/colorWarning"
        app:errorTextColor="?attr/colorWarning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appCompatTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amountEditText"
            style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:lines="1"
            android:nextFocusDown="@id/amountInput"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/priceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:drawablePadding="2dp"
        android:drawableTint="?android:attr/textColor"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_approx"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@+id/amountInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/amountInputLayout"
        app:layout_constraintWidth_max="wrap"
        app:layout_constraintWidth_percent="0.85"
        tools:text="$143,582.34" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/primary_or_disabled"
        android:text="@string/save"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priceTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/cancel"
        android:textColor="?android:attr/textColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/saveButton" />

</androidx.constraintlayout.widget.ConstraintLayout>