<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.wallet_creation.WalletCreationActivity">

    <View
        android:id="@+id/headerBackground"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@drawable/banner_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/create_wallet"
        android:textColor="?attr/colorOnBackground"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/headerBackground"
        app:layout_constraintStart_toStartOf="@+id/headerBackground" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="18dp"
        android:hint="@string/coin_name_hint"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:endIconDrawable="@drawable/ic_search"
        app:endIconMode="custom"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerBackground">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/coinNameInput"
            style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:nextFocusDown="@id/amountInput"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.bosphere.fadingedgelayout.FadingEdgeLayout
        android:id="@+id/fadingEdgeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:fel_edge="top|bottom"
        app:fel_size_bottom="20dp"
        app:fel_size_top="20dp"
        app:layout_constraintEnd_toEndOf="@+id/nameInputLayout"
        app:layout_constraintHeight_percent="0.30"
        app:layout_constraintStart_toStartOf="@+id/nameInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/nameInputLayout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/coinSelectionList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/coin_recommendation_item" />

    </com.bosphere.fadingedgelayout.FadingEdgeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amountInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="14dp"
        android:hint="@string/amount_hint"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fadingEdgeLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amountInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/action_save_wallet"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintEnd_toEndOf="@+id/amountInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/amountInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>